Vertex Color layer corrupted after edge operations in EDIT mode #81865

Closed
opened 2020-10-19 19:55:32 +02:00 by Ilja Razinkov · 9 comments

System Information
Operating system: MacOs Catalina 10.15.7
Graphics card: Radeon Pro 570X 4 GB

Blender Version
Broken: Blender 2.91.0, Commit date: 2020-10-18 20:27, Hash 48c484a22e
Caused by aafd71a8a1

Steps:

  • object have subdivision and vertex color layers with non-default name.
  • vertex color is filled with color
  • i use "Offset Edge slide" operation (Ctrl-Shift-R) in edit mode on some selected edges
  • Result: Vertex colors on that verts are filled with white - but only in non-default vertex color layer.
    Expected results: Colors are interpolated and vertex color is not changed to white on new verts, just as on default vertex color "Col"

The same problem exists if use "Loop Cur and slide" operation instead on "Offset Edge slide"
See video with bug demonstration for reference

Screen Recording 2020-10-19 at 20.47.01.mov

VertexColorLayerCorrupted.blend

System Information Operating system: MacOs Catalina 10.15.7 Graphics card: Radeon Pro 570X 4 GB Blender Version Broken: Blender 2.91.0, Commit date: 2020-10-18 20:27, Hash 48c484a22e0d Caused by aafd71a8a1 Steps: - object have subdivision and vertex color layers with non-default name. - vertex color is filled with color - i use "Offset Edge slide" operation (Ctrl-Shift-R) in edit mode on some selected edges - Result: Vertex colors on that verts are filled with white - but only in non-default vertex color layer. Expected results: Colors are interpolated and vertex color is not changed to white on new verts, just as on default vertex color "Col" The same problem exists if use "Loop Cur and slide" operation instead on "Offset Edge slide" See video with bug demonstration for reference [Screen Recording 2020-10-19 at 20.47.01.mov](https://archive.blender.org/developer/F9016952/Screen_Recording_2020-10-19_at_20.47.01.mov) [VertexColorLayerCorrupted.blend](https://archive.blender.org/developer/F9016960/VertexColorLayerCorrupted.blend)
Author

Added subscriber: @IPv6

Added subscriber: @IPv6
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Philipp Oeser self-assigned this 2020-10-20 09:46:37 +02:00
Member

Confirmed, will check.

Confirmed, will check.
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Oops, meant to confirm this, not close.

Oops, meant to confirm this, not close.

This issue was referenced by 239eb95ef8

This issue was referenced by 239eb95ef879088d690eec331619c3ddabc595aa
Member

Caused by aafd71a8a1, tmp custom data layers were not copying the names of the src layers

Caused by aafd71a8a1, tmp custom data layers were not copying the names of the src layers
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81865
No description provided.